--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "mongoose": "^8.0.0",
+    "next": "14.0.4",
+    "next-auth": "^5.0.0-beta.3",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.4"
+    "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/node": "20.12.2",
+    "@types/react": "18.2.73",
     "eslint": "^8",
     "eslint-config-next": "14.0.4"
   }
